--- a/composer.json
+++ b/composer.json
@@ -1,2 +1,14 @@
 {
+    "name": "Flc/Alidayu",
+    "description": "叶子坑 - 阿里大于API",
+    "keywords": ["alidayu", "flc"],
+    "license": "MIT",
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Flc\\Alidayu\\": "src/Alidayu/"
+        }
+    }
 }
