--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Flc/Alidayu",
+    "name": "flc/alidayu",
     "description": "叶子坑 - 阿里大于API",
     "keywords": ["alidayu", "flc"],
     "license": "MIT",
